--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,24 @@
     <title>Exercice hebdomadaire 9</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello world</h1>
-
+    <div class="dialog-card">
+      <div class="dialog-title">Supprimer le compte ?</div>
+      <div class="dialog-message">
+        Êtes-vous sûr de vouloir supprimer définitivement votre compte ?
+      </div>
+      <div class="dialog-button-group">
+        <div class="dialog-button-01">Annuler</div>
+        <div class="dialog-button-02">Supprimer</div>
+      </div>
+    </div>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
